Removendo endpoints desnecessários